<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



        <LinearLayout

            android:id="@+id/verticalLayoutOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/team_a_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="16dp"
                    android:text="@string/TeamA"
                    android:textSize="14sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-medium"/>

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="16dp"
                    android:text="@string/zero"
                    android:textSize="56sp"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"/>

                <Button
                    android:id="@+id/point_three_button_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="pointThreeA"
                    android:text="@string/threepoint" />

                <Button
                    android:id="@+id/point_two_button_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="pointTwoA"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginLeft="24dp"
                    android:text="@string/twoPoints" />

                <Button
                    android:id="@+id/point_free_throw_button_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dp"
                    android:layout_marginLeft="24dp"
                    android:onClick="freeThrowA"
                    android:text="@string/freeThrow" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_b_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="16dp"
                    android:text="@string/TeamB"
                    android:textSize="14sp"
                    android:textColor="#616161"
                    android:fontFamily="sans-serif-medium"/>

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="16dp"
                    android:text="@string/zeroA"
                    android:textSize="56sp"
                    android:textColor="#000000"
                    android:fontFamily="sans-serif-light"/>

                <Button
                    android:id="@+id/point_three_button_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="pointThreeB"
                    android:text="@string/threepoint" />

                <Button
                    android:id="@+id/point_two_button_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="pointTwoB"
                    android:text="@string/twoPoints" />

                <Button
                    android:id="@+id/point_free_throw_button_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dp"
                    android:layout_marginLeft="24dp"
                    android:onClick="freeThrowB"
                    android:text="@string/freeThrow" />
            </LinearLayout>



        </LinearLayout>


        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:onClick="reset"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="32dp"
            />
    </RelativeLayout>

